Class cast exception problem fixed for non-double values.